fixed comic spacing

--- a/Homepage.css
+++ b/Homepage.css
@@ -165,7 +165,7 @@ a {
 }
 
 .xkcdcontent {
-  padding: 0 10px;
+  margin: 10px 0px 10px 0px;
 }
 
 .xkcdImage {
@@ -181,7 +181,7 @@ a {
   width:32%;
   text-align: center;
   margin-left: 1%;
-  padding: 2px 0;
+  padding: 2px 0 2px 0;
   font-size: 14px;
   background-color:rgba(255, 255, 255, 0.3);
 }
